# songwuensche

./: Cargo.toml  README.md  config.json
songwuensche_x86_64_windows/: config.json
src/: main.rs
src/core/: mod.rs  recommendations.rs  songrecommendationsconfig.rs
src/gui/: mod.rs
